Fix summary layout on smaller displays
With a 50% column width, the table of contents overlapped the image.
Make the column with 48% to prevent this.

Tall featured images were also pushing the summary text outside of view.
Move the summary text to the top of the display, pushing the table of
contents down.

Add padding to the bottom or elements so they don't get cut off by
the footer.

Remove the byline as it's redundant with the omnipresent header bar.

Addresses #851

--- a/static/less/viewer.less
+++ b/static/less/viewer.less
@@ -122,15 +122,16 @@
     
     .summary {
       padding: 1%;
+
+      .title {
+        width: 100%;
+      }
     
-      .summary-overview, .summary-toc {
-        width:50%;
-        float:left;
-        
-        .byline {
-          color:@gray; 
-          font-style:italic;
-        }
+      .summary-image, .summary-text, .summary-toc {
+        width: 48%;
+        float: left;
+        // Clear the footer
+        //padding-bottom: 40px;
         
         ul {
           padding:0;
@@ -140,10 +141,20 @@
         }
       }
     
-      .summary-overview .featured-asset {
+      .summary-image .featured-asset {
+        margin-right: 0;
+        max-width: 100%;
         float:none;
       }
-    
+
+      .summary-image {
+        padding-right: 4%;
+      }
+
+      .summary-toc {
+        // Clear footer
+        padding-bottom: 40px;
+      }     
   }
 
 
@@ -340,6 +351,7 @@
   iframe.sandboxed-asset {
     border:none;
   }
+
   
   // from here down to end of .story-viewer block copied from old style.css. 
   // these are probably applicable in more places than in story-viewer.
